--- a/HellMail.Data/HellMail.Data.csproj
+++ b/HellMail.Data/HellMail.Data.csproj
@@ -15,4 +15,9 @@
   <ItemGroup>
     <ProjectReference Include="..\HellMail.Domain\HellMail.Domain.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Runtime">
+      <HintPath>..\..\..\..\..\usr\share\dotnet\sdk\NuGetFallbackFolder\microsoft.netcore.app\2.2.0\ref\netcoreapp2.2\System.Runtime.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
