--- a/HellMail.Data/HellMail.Data.csproj
+++ b/HellMail.Data/HellMail.Data.csproj
@@ -6,6 +6,21 @@
 
   <ItemGroup>
     <Compile Remove="Class1.cs" />
+    <Compile Remove="Migrations\20190402122416_init.cs" />
+    <Compile Remove="Migrations\20190402122416_init.Designer.cs" />
+    <Compile Remove="Migrations\20190425090213_init2.cs" />
+    <Compile Remove="Migrations\20190425090213_init2.Designer.cs" />
+    <Compile Remove="Migrations\20190425092110_mails_users.cs" />
+    <Compile Remove="Migrations\20190425092110_mails_users.Designer.cs" />
+    <Compile Remove="Migrations\20190425092603_mails_users2.cs" />
+    <Compile Remove="Migrations\20190425092603_mails_users2.Designer.cs" />
+    <Compile Remove="Migrations\HellMailContextModelSnapshot.cs" />
+    <Compile Remove="Migrations\20190425092907_init.cs" />
+    <Compile Remove="Migrations\20190425092907_init.Designer.cs" />
+    <Compile Remove="Migrations\20190425093355_init2.cs" />
+    <Compile Remove="Migrations\20190425093355_init2.Designer.cs" />
+    <Compile Remove="Migrations\20190425103911_recipient_field_added.cs" />
+    <Compile Remove="Migrations\20190425103911_recipient_field_added.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.3" />
@@ -19,5 +34,8 @@
     <Reference Include="System.Runtime">
       <HintPath>..\..\..\..\..\usr\share\dotnet\sdk\NuGetFallbackFolder\microsoft.netcore.app\2.2.0\ref\netcoreapp2.2\System.Runtime.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 </Project>
